# COBOLEval

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: CobolEval.jsonl  HumanEval.jsonl
scripts/: data.py  evaluate_functional_correctness.py  evaluation.py  generate.py  utils.py
src/: main.rs
